--- a/asciidoc-markup-sample-doc/content/topics/ref_topic-metadata.adoc
+++ b/asciidoc-markup-sample-doc/content/topics/ref_topic-metadata.adoc
@@ -1,4 +1,5 @@
 
+:numbered!:
 = Topic metadata and Section Anchors
 Every topic file should contain the following metadata at the top,
 with no line spacing in between, except where noted:
