--- a/asciidoc-markup-sample-doc/content/asciidoc-markup-samples.adoc
+++ b/asciidoc-markup-sample-doc/content/asciidoc-markup-samples.adoc
@@ -1,5 +1,5 @@
 
-:numbered!:
+:experimental:
 include::topics/ref_topic-metadata.adoc[leveloffset=+1]
 
 include::topics/ref_internal-xref.adoc[leveloffset=+1]
@@ -14,6 +14,6 @@ include::topics/ref_inline-code.adoc[leveloffset=+1]
 
 include::topics/ref_lists.adoc[leveloffset=+1]
 
-include::topics/ref_format-reference.adoc[leveloffset=+1]
+include::topics/ref_gui.adoc[leveloffset=+1]
 
 include::topics/ref_quick-markup-reference.adoc[leveloffset=+1]
