Create publishing script

--- a/asciidoc-markup-sample-doc/content/asciidoc-markup-samples.adoc
+++ b/asciidoc-markup-sample-doc/content/asciidoc-markup-samples.adoc
@@ -1,7 +1,5 @@
-
-
 :experimental:
-== AsciiDoc Markup Quick Reference
+= AsciiDoc Markup Quick Reference
 
 |===
 |Convention|Markup|Example rendered output
