Make table cols proportional, add docinfo attrib.

--- a/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
+++ b/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
@@ -1,8 +1,10 @@
 :experimental:
+:source-highlighter: prettify
+:docinfo1:
 
 = AsciiDoc Mark-up Quick Reference for Red{nbsp}Hat Documentation
 
-[stripes="none"]
+[cols="2,4,4"]
 |===
 |Element|Mark-up|Example rendered output
 
