--- a/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
+++ b/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
@@ -164,7 +164,7 @@ Answer by typing `Yes` or `No` when prompted.
 | Keyboard shortcuts
 a|
 ....
-kbd:[key1(+key2+...)]
+kbd:[Ctrl+Alt+Del]
 ....
 a| kbd:[Ctrl+Alt+Del]
 
