Replace single quotes by double quotes as asked by @rkratky
Signed-off-by: Fabrice Flore-Thébault <ffloreth@redhat.com>

--- a/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
+++ b/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
@@ -17,11 +17,11 @@ Some markup examples used in this overview are based on new Asciidoctor features
 
 a|Anchor
 
-NOTE: The `+++{context}+++` variable is recommended for making modules reusable. Example: `+++[id='section-header_{context}']+++`. For details, see the link:https://redhat-documentation.github.io/modular-docs/#reusing-modules[Modular Documentation Reference Guide].
+NOTE: The `+++{context}+++` variable is recommended for making modules reusable. Example: `+++[id="section-header_{context}"]+++`. For details, see the link:https://redhat-documentation.github.io/modular-docs/#reusing-modules[Modular Documentation Reference Guide].
 
 a|
 ....
-[id='section-header_{variable}']
+[id="section-header_{variable}"]
 Section Header
 ....
 a|
