--- a/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
+++ b/asciidoc-markup-sample-doc/asciidoc-markup-samples.adoc
@@ -253,11 +253,11 @@ a|See the JBoss EAP link:guide-url[_Getting Started Guide_] for more information
 |System or software variable to be replaced by the user
 a|
 ....
-Use the following command to roll back a deployment, specifying the deployment name: `oc rollback _deployment_`.
+Use the following command to roll back a deployment, specifying the deployment name: `oc rollback _<deployment>_`.
 ....
 
 a|
-Use the following command to roll back a deployment, specifying the deployment name: `oc rollback _deployment_`.
+Use the following command to roll back a deployment, specifying the deployment name: `oc rollback _<deployment>_`.
 
 
 |System or software configuration parameter or environment variable
